sql/item_func.cc
@@ -3247,7 +3247,7 @@ double Item_func_match::val()
   if (ft_handler == NULL)
     DBUG_RETURN(-1.0);
 
-  if (table->null_row) /* NULL row from an outer join */
+  if (key != NO_SUCH_KEY && table->null_row) /* NULL row from an outer join */
     return 0.0;
 
   if (join_key)
